<resources>
    <string name="app_name">Health Diary</string>
    <string name="welcome_msg">Welcome to the Health Diary\n\t\t\t\t\t\t\t\tby Moritz Grob</string>
    <string name="current_user">Current user:\u0020</string>
    <string name="current_pat">current_patient</string>
    <string name="current_loc">current_location</string>
    <string name="current_location">Current location:\u0020</string>

    <string name="goto_BP_activity">My Blood Pressure Record</string>
    <string name="goto_mass_activity">My Body Mass Record</string>
    <string name="goto_change_user">Change current user</string>
    <string name="goto_change_location">Change location</string>


    <string name="record_Mass_prompt">Enter body mass in kg:</string>
    <string name="average_prompt">average blood pressure and weight:</string>
    <string name="last_prompt">last entered values:</string>
    <string name="record_BP_prompt">Enter blood pressure in mmHg:</string>
    <string name="sys_hint">systolic (bigger number)</string>
    <string name="dia_hint">diastolic (smaller number)</string>

    <string name="save">save</string>
    <string name="rand">generate random values</string>
    <string name="DateTimePicker_title">Pick a date and time</string>
    <string name="DisplayListOfReadings_title">List of saved recordings</string>
    <string name="show_all">show all</string>
    <string name="change_date">change date</string>
    <string name="date_chosen">Chosen date:\u0020</string>
    <string name="now">\u0009\u0009now</string>
    <string name="empty_list_item">nothing to see here\u2026 please move along!</string>
    <string name="log_tag">MyTag</string>
    <string name="readings_for_list_tag">readings</string>
    <string name="no_avg">No readings yet.</string>
    <string name="db_read_error">"error during accessing database :("</string>
    <string name="avg_bp">averageBloodPressure</string>
    <string name="avg_m">averageMass</string>
    <string name="latest_bp">latestBloodPressure</string>
    <string name="latest_m">latestMass</string>
    <string name="latest_t">latestTemperature</string>
    <string name="login_activity_title">Enter password for Health Diary</string>
    <string name="default_password">default\n(insecure)</string>
    <string name="login_activity_prompt">Please enter the master password for the database.\nIf you are using the app for the first time\nthis will set the password.\nPlease remember it carefully, otherwise\nyour data will be irretrievably lost.\nCannot be changed later.</string>
    <string name="password_hint">password</string>
    <string name="get_login">hey, it\'s me!</string>
    <string name="toast_wrong_pwd">WRONG!</string>
    <string name="toast_no_saved_pwd">no luck this time\u2026</string>
    <string name="toast_no_escape">you cannot escape\u2026</string>
    <string name="toast_no_internet">no internet connection\u2026</string>
    <string name="toast_invalid_number">Please enter valid number</string>
    <string name="toast_wait_for_api_call">Please wait a second for temperature check to finish</string>
    <string name="toast_invalid_bp_values">Please call an ambulance!</string>
    <string name="toast_dia_bigger_than_sys">Systolic has to be bigger than diastolic!</string>
    <string name="toast_db_write_error">Error saving to database</string>
    <string name="toast_invalid_dec_number">Please enter valid decimal number</string>
    <string name="toast_invalid_m_value">Enter number between 5 and 300 kg</string>
    <string name="toast_unsuccessful_api_call">Getting temperature failed, maybe check your internet connection?</string>

    <!-- a little more obfuscation in the naming of encrypted shared prefs. -->
    <string name="pref_file_key">com.example.healthdiary.d289c38f03b32c4469c65dd9f8b35823</string>
    <string name="key1">628eec52ab4be8134f9495f4b5d8c37e</string>
    <string name="default_value1">4fe9ecf2d6edfc02c83f469019a5374a</string>
    <string name="key2">33adcd7ff5141ff6b4ac8d9ff2d383ab</string>
    <string name="default_value2">ce329d3ca881118b05a385a11a1b67de</string>
    <string name="key3">f5108516a67af6a4c2742398d4b3ade9</string>
    <string name="default_value3">9ccb0f993d91e0a243a4d9e85ca216e8</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- Strings related to choosing/creating patient -->
    <string name="create_new_long">Create new patient</string>
    <string name="choose_existing_long">log in as existing patient</string>
    <string name="create_new_short">Create new</string>
    <string name="action_sign_in_short">Sign in</string>


    <string name="permission_location_why">Why we ask for location permissions</string>
    <string name="permission_location_explanation">Outside temperature is saved with all readings\nIf you deny location access, your location will default to Vienna, AT.\nThis can be changed manually later.\nIf your input is not recognised or no network is connected, no weather info will be gathered.</string>
    <string name="default_location">"Location set to Vienna, AT"</string>


    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="goto_medication_reminder">Add Medication Reminder</string>
    <string name="export_fhir_resource">Export</string>
    <string name="share">share</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>