<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/change_patient"
        android:title="@string/goto_change_user"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_location"
        android:title="@string/goto_change_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/blood_pressure_record"
        android:title="@string/goto_BP_activity"
        app:showAsAction="never" />

    <item
        android:id="@+id/body_mass_record"
        android:title="@string/goto_mass_activity"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_medication_reminder"
        android:title="@string/goto_medication_reminder"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_fhir"
        android:title="@string/export_fhir_resource"
        app:showAsAction="never" />

</menu>
