<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecordBodyMassActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="80dp"
        android:text="@string/record_Mass_prompt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextWeight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChosenDate_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/date_chosen"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewMChosenDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMChosenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/now"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMChangeDate"
        app:layout_constraintStart_toEndOf="@+id/textViewChosenDate_fixed"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/buttonMRand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minHeight="56dp"
        android:text="@string/rand"
        app:layout_constraintBottom_toTopOf="@+id/buttonMShowAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:minHeight="56dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/record_Mass_prompt"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonMChangeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minHeight="56dp"
        android:text="@string/change_date"
        app:layout_constraintBottom_toTopOf="@+id/buttonMRand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMShowAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minHeight="56dp"
        android:text="@string/show_all"
        app:layout_constraintBottom_toTopOf="@+id/buttonMSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>