<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewLastPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="23dp"
            android:text="@string/last_prompt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAvgM" />

        <TextView
            android:id="@+id/textViewLastTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewLastBp"
            app:layout_constraintStart_toStartOf="@+id/textViewLastBp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLastM" />

        <TextView
            android:id="@+id/textViewLastM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewLastBp"
            app:layout_constraintStart_toStartOf="@+id/textViewLastBp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLastBp" />

        <TextView
            android:id="@+id/textViewLastBp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="000/000 mmHg at 1979-01-01T00:00:00.001Z"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewLastPrompt"
            app:layout_constraintTop_toBottomOf="@+id/textViewLastPrompt"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="39dp"
            android:text="@string/welcome_msg"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewCurrentUser"
            app:layout_constraintStart_toStartOf="@+id/textViewCurrentUser" />

        <TextView
            android:id="@+id/textViewAveragePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginBottom="267dp"
            android:text="@string/average_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewAvgBp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textViewAvgM"
            app:layout_constraintStart_toStartOf="@+id/textViewAvgM"
            app:layout_constraintTop_toBottomOf="@+id/textViewAveragePrompt" />

        <TextView
            android:id="@+id/textViewAvgM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewLastPrompt"
            app:layout_constraintTop_toBottomOf="@+id/textViewAvgBp" />

        <TextView
            android:id="@+id/textViewCurrentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="197dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:text="@string/current_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/current_location"
            app:layout_constraintStart_toStartOf="@+id/textViewCurrentUser"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentUser" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_bar_menu" >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
